# frontend-port

./: .env  next.config.ts  package-lock.json  package.json  pyproject.toml
src/Backend/: .env
src/Backend/src/backend/: main.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/blog/: page.tsx
src/app/chat/: page.tsx
src/app/contact/: page.tsx
src/app/content-blog/: page.tsx
src/app/faq/: page.tsx
src/components/footer/: footer.tsx
src/components/hero/: hero.tsx  teen.tsx
src/components/navbar/: nav.tsx  nav1.tsx
src/components/text/: cards.tsx  text.tsx
